syntax = "proto3";
option csharp_namespace = "Time.Net";
package time;

import "google/protobuf/timestamp.proto";

message SubscribeRequest {
  enum Unit {
      MilliSeconds = 0;
      Seconds = 1;
  }
  sint32 interval = 1;
  Unit unit = 2;
  sint32 count = 3;
}

service TimeService {
  rpc Subscribe(SubscribeRequest) returns (stream google.protobuf.Timestamp);
}
